--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,9 +5,9 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    background-color: rgba(40, 40, 40, 0.5);
+    border-bottom: 3px solid rgba(124, 111, 100, 0.5);
+    color: #fbf1c7;
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -21,16 +21,16 @@ window#waybar.empty {
     border: none;
 }
 /*window#waybar.solo {
-    background-color: #FFFFFF;
+    background-color: #fbf1c7;
 }
 */
 
 window#waybar.termite {
-    background-color: #3F3F3F;
+    background-color: #3c3836;
 }
 
 window#waybar.chromium {
-    background-color: #000000;
+    background-color: #282828;
     border: none;
 }
 
@@ -45,31 +45,31 @@ button {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
-    color: #ffffff;
+    color: #fbf1c7;
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(40, 40, 40, 0.2);
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: #7c6f64;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+    background-color: #cc241d;
 }
 
 #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    background-color: #7c6f64;
+    border-bottom: 3px solid #fbf1c7;
 }
 
 #clock,
@@ -92,7 +92,7 @@ button:hover {
 #custom-update,
 #mpris {
     padding: 0 10px;
-    color: #ffffff;
+    color: #fbf1c7;
 }
 
 #window,
@@ -111,29 +111,29 @@ button:hover {
 }
 
 #clock {
-    background-color: #64727D;
+    background-color: #7c6f64;
 }
 
 #battery {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #fbf1c7;
+    color: #282828;
 }
 
 #battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+    color: #fbf1c7;
+    background-color: #689d6a;
 }
 
 @keyframes blink {
     to {
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #fbf1c7;
+        color: #282828;
     }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
+    background-color: #fb4934;
+    color: #fbf1c7;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -142,94 +142,92 @@ button:hover {
 }
 
 label:focus {
-    background-color: #000000;
+    background-color: #282828;
 }
 
 #cpu {
-    background-color: #2ecc71;
-    color: #000000;
+    background-color: #98971a;
 }
 
 #memory {
-    background-color: #9b59b6;
+    background-color: #8f3f71;
 }
 
 #mpris {
-    color: #000000;
-    background-color:  #E8A2AF;
+    background-color:  #b16286;
 }
 
 #disk {
-    background-color: #964B00;
+    background-color: #af3a03;
 }
 
 #backlight {
-    background-color: #90b1b1;
-    color: #000000;
+    background-color: #458588;
 }
 
 #network {
-    background-color: #2980b9;
+    background-color: #83a598;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
+    background-color: #fb4934;
 }
 
 #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
+    background-color: #d79921;
+    color: #282828;
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
+    background-color: #83a598;
+    color: #3c3836;
 }
 
 #wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
+    background-color: #ebdbb2;
+    color: #282828;
 }
 
 #wireplumber.muted {
-    background-color: #f53c3c;
+    background-color: #fb4934;
 }
 
 #custom-update {
-    background-color: #eb4d4b;
+    background-color: #cc241d;
 
 }
 
 #custom-dunst {
-    background-color: #97e1ad;
-    color: #000000;
+    background-color: #8ec07c;
+    color: #282828;
 }
 
 #custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
+    background-color: #076678;
+    color: #fbf1c7;
     min-width: 100px;
 }
 
 #custom-media.custom-spotify {
-    background-color: #66cc99;
+    background-color: #076678;
+    color: #fbf1c7;
 }
 
 #custom-media.custom-vlc {
-    background-color: #ffa000;
+    background-color: #fe8019;
 }
 
 #temperature {
-    background-color: #f0932b;
-    color: #000000;
+    background-color: #d65d0e;
+    color: #fbf1c7;
 }
 
 #temperature.critical {
-    background-color: #eb4d4b;
+    background-color: #cc241d;
 }
 
 #tray {
-    background-color: #2980b9;
+    background-color: #83a598;
 }
 
 #tray > .passive {
@@ -238,46 +236,47 @@ label:focus {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+    background-color: #cc241d;
 }
 
 #idle_inhibitor {
-    background-color: #2d3436;
+    background-color: #3c3836;
 }
 
 #idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
+    background-color: #ebdbb2;
+    color: #3c3836;
 }
 
 #mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
+    background-color: #076678;
+    color: #fbf1c7;
 }
 
 #mpd.disconnected {
-    background-color: #f53c3c;
+    background-color: #fb4934;
 }
 
 #mpd.stopped {
-    background-color: #90b1b1;
+    background-color: #83a598;
+    color: #3c3836;
 }
 
 #mpd.paused {
-    background-color: #51a37a;
+    background-color: #427b58;
 }
 
 #language {
-    background: #00b093;
-    color: #740864;
+    background: #79740e;
+    color: #fbf1c7;
     padding: 0 5px;
     margin: 0 5px;
     min-width: 16px;
 }
 
 #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
+    background: #8ec07c;
+    color: #282828;
     padding: 0 0px;
     margin: 0 5px;
     min-width: 16px;
@@ -288,11 +287,11 @@ label:focus {
 }
 
 #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(40, 40, 40, 0.2);
 }
 
 #scratchpad {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(40, 40, 40, 0.2);
 }
 
 #scratchpad.empty {
